# plinko-sim

./: CMakeLists.txt  README.md  game.c  game.h  main.c  menu.c  menu.h
